collect -> to list